RESOLVED FIXED95142
[BlackBerry] Pseudo class "active" is broken
https://bugs.webkit.org/show_bug.cgi?id=95142
Summary [BlackBerry] Pseudo class "active" is broken
Andy Chen
Reported 2012-08-27 15:37:54 PDT
This is caused by the patch for https://bugs.webkit.org/show_bug.cgi?id=94938.
Attachments
Patch (1.73 KB, patch)
2012-08-27 16:07 PDT, Andy Chen
no flags
Andy Chen
Comment 1 2012-08-27 16:07:55 PDT
WebKit Review Bot
Comment 2 2012-08-28 05:59:37 PDT
Comment on attachment 160841 [details] Patch Clearing flags on attachment: 160841 Committed r126870: <http://trac.webkit.org/changeset/126870>
WebKit Review Bot
Comment 3 2012-08-28 05:59:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.