[BlackBerry] Pseudo class "active" is broken https://bugs.webkit.org/show_bug.cgi?id=95142

Patch by Andy Chen <andchen@rim.com> on 2012-08-28
Reviewed by Antonio Gomes.

Check if an element is affected by active rule before cancelling
the touch event.
PR 198544.

* WebKitSupport/TouchEventHandler.cpp:
(BlackBerry::WebKit::TouchEventHandler::touchEventCancel):

Canonical link: https://commits.webkit.org/113047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126870 268f45cc-cd09-0410-ab3c-d52691b4dbfc